<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TEST_APPActivity!</string>
    <string name="app_name">MTA</string>
	
	<string name="num_0">0</string>
	<string name="num_1">1</string>
	<string name="num_2">2</string>
	<string name="num_3">3</string>
	<string name="num_4">4</string>
	<string name="num_5">5</string>
	<string name="num_6">6</string>
	<string name="num_7">7</string>
	<string name="num_8">8</string>
	<string name="num_9">9</string>
	<string name="mta_version_title">MTA版本:</string>
	<string name="mac_addr_title">MAC地址:</string>
	<string name="hdcp_key_title">HDCP:</string>
	<string name="hdcp_key_2_2_title">HDCP 2.2:</string>
	<string name="system_version_title">系统版本:</string>
	<string name="product_version_title">版本备注:</string>
	<string name="serial_title">序列号:</string>
	<string name="description_title">测试步骤：</string>
	<string name="result_title">测试结果：</string>
	<string name="reset_title">重置</string>
	<string name="reset_title_f">工厂重置</string>
	<string name="inspect_passed">测试通过</string>
	<string name="inspect_failed">测试失败</string>
	<string name="inspect_didnot_passed">测试未通过</string>
	<string name="reset_tip">点击“重置”，退出检测</string>
	<string name="reset_result_ok">工厂重置成功，自动关机</string>
	<string name="reset_result_ng">工厂重置失败</string>
	<string name="reset_result_fail">工厂重置失败,再次重置，请等待重新重置！！！！！！！！！！！！！！</string>
	<string name="reset_result_ng_ex">连续重置5次失败，放弃重置，请断电关机</string>
	<string name="reset_time">重置次数</string>
	
	<string name="please_scan_serial_number">请扫描MAC地址</string>
	<string name="please_scan_serial_number_again">请再次扫描MAC地址</string>
	<string name="please_scan_benq_serial_number">请扫描序列号</string>
	<string name="sn_error_invalid_mac">无效MAC地址，请重新扫描</string>
	<string name="sn_error_same_mac">输入MAC地址与板子当前的MAC地址相同</string>
	<string name="sn_error_same_sn">待烧写的SN与板子当前的SN相同</string>
	<string name="sn_error_database_not_found">找不到数据库文件，请确认是否已经插上含有数据库文件的U盘</string>
	<string name="sn_error_database_unopenable">无法打开数据库文件，请检查U盘是否可读写、U盘中的数据库文件是否正确</string>
	<string name="sn_error_been_used">输入的MAC地址已经被使用，请扫描其他未被使用的MAC</string>
	<string name="sn_error_get_sn_failed">获取序列号失败</string>
	<string name="sn_error_write_failed">烧写MAC、序列号失败，请重新操作一遍</string>
	<string name="sn_error_empty_mac">MAC地址不存在，请先烧写MAC地址</string>
	<string name="sn_error_read_exception">读取数据库数据出错，请确认数据库表格是否正确</string>
	<string name="sn_error_write_exception">修改数据库内容出错，请确认数据库表格是否正确</string>
	<string name="mac_error_not_in_db">数据库不包含此MAC，请检查数据库</string>
	<string name="hdcp_1_4_empty">读取不到HDCP KEY 1.4 数据，请检测数据库文件是否正确</string>
	<string name="hdcp_2_2_empty">读取不到HDCP KEY 2.2 数据，请检测数据库文件是否正确</string>
	<string name="hdcp_1_4_failed">烧录 1.4 HDCP KEY出错</string>
	<string name="hdcp_2_2_failed">烧录 2.2 HDCP KEY出错</string>
	<string name="hdcp_re_burn_ok">HDCP KEY 重烧录成功</string>
	<string name="hdcp_error_md5_not_match">读取HDCP KEY出错，若多次扫描MAC仍出错则可能是数据库文件制作有误。</string>
	<string name="hdcp_error_write_failed">烧录HDCP KEY出错，请重新扫描。</string>
	<string name="sn_error_unknown">未知错误， 请重试！</string>
	<string name="write_sn_success">烧写MAC、序列号成功</string>
	<string name="write_sn_failed">烧写MAC、序列号失败，请重新操作一遍</string>
	<string name="sn_tip_title">操作指引:</string>
	<string name="sn_tip">1.准备一个具有<i>读写权限</i>的U盘\n2.U盘内放入存有MAC地址、SN等信息的数据库文件(<i>EOS_MTA.db</i>)\n3.将U盘插入主板USB接口\n4.焦点移动到输入框，扫描MAC条形码</string>
	<string name="sn_last_error_message">反馈信息:</string>
	<string name="sn_re_hdcpkey">重烧录HDCP_KEY</string>
	<string name="hdcp_make_up_tip">重烧HDCP KEY功能只用于返修板，只针对漏烧KEY、无效KEY的情况。</string>
	
	<string name="wifi_signal_title">信号强度</string>
	<string name="restore_ing">正在重置系统</string>
	<string name="waite_restore">等待重置完成</string>
	
	<string name="please_waite">请等待</string>
	<string name="generating_hdcp_db">正在生成HDCP Key数据库....</string>
	<string name="can_not_found_usb_device">找不到U盘</string>
	<string name="more_than_one_usb_device">挂载了多个U盘，请去除不带HDCP Key文件的U盘</string>
	<string name="can_not_find_hdcp_bunch_file">找不到HDCP Key文件</string>
	<string name="hdcp_bunch_file_too_small">HDCP Key 文件太小,请检测是否含有有效的HDCP Key数据</string>
	<string name="hdcp_bunch_file_not_match">Hdmi HdcpKey文件和Miracast HdcpKey文件的大小不一致，它们应该具有相同数目的HdcpKey数据。</string>
	<string name="create_hdcp_database_failed">创建HdcpKey数据库失败，请检查U盘是否具有读写权限</string>
	<string name="read_hdcp_file_error">在读取HdcpKey时出错，请重试。</string>
	
	<string name="open_hdcp_database_failed">打开数据库失败。</string>
	<string name="no_hdcp_key_left">数据库里没有未使用的HDCP KEY，请更换HDCP KEY文件</string>
	<string name="bad_hdcp_key_data">读取数据出错，请重新操作或更换HDCP KEY文件并删除U盘里mta_hdcp_key.db文件后重试</string>
	<string name="have_been_modified">读取到的HDCP KEY校验不对，请更换HDCP KEY文件并删除U盘里mta_hdcp_key.db文件后重试</string>
	<string name="write_hdcp_key_error">烧写HDCP KEY失败，请重试。</string>
	<string name="read_hdcp_key_error">读取刚烧写的HDCP KEY失败，请重试。</string>
	<string name="programme_hdcp_key_successed">烧录HDCP KEY成功！</string>
	<string name="programme_hdcp_key_done">已烧录HDCP KEY 成功</string>
	<string name="programme_hdcp_key_undone">未烧录HDCP KEY</string>
	<string name="programme">烧录</string>
	<string name="programming_hdcp_key">正在烧录HDCP KEY....</string>
	
	<string name="usb1">USB1</string>
	<string name="usb2">USB2</string>
	<string name="usb3">USB3</string>
	<string name="ethernet">以太网</string>
	<string name="wifi">WIFI</string>
	<string name="common_port_tag">通用端口检测</string>
	<string name="video_tag">视频输入端口测试</string>
	<string name="vga_adc_tag">VGA ADC自动调整</string>
	<string name="dlp_pattern_tag">DLP测试图片</string>
	<string name="hdcp_key_tag">烧写HDCP KEY</string>
	<string name="pass">通过</string>
	<string name="crc_title_str">校验结果</string>
	<string name="pass_en">Pass</string>
	<string name="fail">失败</string>
	<string name="fail_en">Fail</string>
	<string name="vga">VGA</string>
	<string name="hdmi">HDMI</string>
	<string name="prev">上一步</string>
	<string name="next">下一步</string>
	<string name="adjust">调整</string>
    <string name="adc_rgain">R Gain</string>
    <string name="adc_ggain">G Gain</string>
    <string name="adc_bgain">B Gain</string>
    <string name="adc_roffset">R Offset</string>
    <string name="adc_goffset">G Offset</string>
    <string name="adc_boffset">B Offset</string>
    <string name="adc_phase">phase</string>
	<string name="finish">完成</string>
	<string name="base_test">通用端口</string>
	<string name="video_test">视频输入</string>
	<string name="adc_test">ADC自动调整</string>
	<string name="pattern_test">DLP Pattern</string>
	<string name="hdcp_test">HDCP KEY</string>
	<string name="show">显示</string>
	<string name="test_result">测试结果</string>
	<string name="hdcp_manual_lable">（手动）HDCP KEY</string>
	<string name="hdcp_manual_descr">确保插入放有含HDCP KEY数据库文件U盘，点击烧录，烧录HDCP KEY</string>
	<string name="adc_manual_lable">（手动）ADC Adjust</string>
	<string name="adc_manual_descr">接入ADC自动校正信号，点击“调整”自动进行校正</string>
	<string name="usb1_manual_lable">（手动3.0）USB1</string>
	<string name="usb2_manual_lable">（手动2.0）USB2</string>
	<string name="fan_speed">（手动）风扇转速</string>	
	<string name="fan1_speed_str">Fan1 转速</string>	
	<string name="fan2_speed_str">Fan2 转速</string>	
	<string name="auto_wb_str">(手动) 自动白平衡</string>
	<string name="benq_sn_str">(手动) BenQ序列号</string>	
	<string name="start_wb_str">开启自动白平衡</string>	
	<string name="reset_mta">重新测试</string>	
	<string name="adc_adjust_str">(手动) ADC Adjust</string>	
	<string name="test_pattern_str">(手动) Test Pattern</string>	
	<string name="hdcpkey_str">(手动) HDCP KEY</string>
	<string name="auto_wb_descr">点击“开启自动白平衡”可打开自动白平衡APK，点击“重新测试”，可重启AMTA</string>	
	<string name="test_result_send_ok">测试结果上传成功</string>
	<string name="no_usb">未插入U盘</string>
	<string name="no_usb_config_file">没有找到配置文件，eostek-fmtac.ini，请检查U盘</string>
	<string name="usb_read_only">只读U盘，无法写入数据，请更换U盘</string>
	<string name="no_url">没有解析到服务器地址，请检查配置文件</string>
	<string name="test_result_send_ng">测试结果上传失败，请检查服务器地址和网路通讯</string>
	<string name="benq_sn_scan_ok_str">序列号扫描成功</string>	
	<string name="test_result_url_ng">服务器配置地址错误，请确认服务器网络地址（注意排查文本编辑器带入隐藏的不兼容字符）</string>
	<string name="test_result_empty">错误，测试结果为空</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="sn_mac_emp">MAC或SN为空，请重新烧录</string>
	<string name="mac_repeat">此MAC地址和服务器记录重复</string>
	<string name="crc_err">服务器反馈数据校验错误，请重新上传测试结果</string>
	<string name="crc_title">测试结果校验</string>
	<string name="crc_burn_desc">请再次扫描MAC地址，校验通过会提示pass,失败提示fail</string>
	<string name="pass_ex">检验通过（两次扫描MAC地址一致）</string>
	<string name="fail_ex">Fail</string>
	<string name="test_crc_tag">以下测试项未通过</string>
	<string name="mac_crc_tag">两次扫描MAC地址不一致</string>
	<string name="mac_old">第一次扫描</string>
	<string name="benq_sn_scan_ng_str">序列号扫描失败</string>
	<string name="mac_new">第二次扫描</string>
	<string name="mac_empty">第一次扫描MAC为空</string>	
	<string name="mac_erc_confirm">点击“确认”将烧录第二次扫描的MAC地址，点击“取消”或者按返回键将放弃这次操作</string>		
	<string name="result_post_ecp_tittle">测试结果上传异常,是否强制重置</string>
	
	<string name="touch_pad_tip">每个按键点击至少3次，对应图标变为绿色表示能正常识别</string>
	<string name="dlp_power_tip">查看图片上红色框所示的指示灯，灯亮表示电源正常</string>
	<string name="battery_power_tip">查看图片上红色框所示的仪器表，数值在6.8 ~ 8.4之间表示电源正常</string>
	<string name="fan_power_tip">查看图片上红色框所示的仪器表，数值在3.61 ~ 3.99之间表示电源正常</string>
	<string name="sn_next_tip">烧写MAC、序列号成功，正在跳转到下一步.....</string>
	<string name="error_sn_alert">请先烧录MAC地址和序列号</string>
	<string name="uploading_mta_result">正在上传测试结果....</string>
	<string name="restoring_mta">正在还原数据....</string>
	<string name="retry">重试</string>
	<string name="shutdowning">正在关机....</string>
	<string name="manual_test_tip">（按确认键状态改为”通过“，再次按确认状态改为“未通过”）</string>
	<string name="headset_operate_tip">接入耳机，能听到声音则为正常</string>
	<string name="invalid_uri">无效服务器地址</string>
	<string name="upload_timeout">上传超时</string>
	<string name="programming_mac_sn">正在烧录MAC地址和序列号</string>
	<string name="programming_re_mac_sn_hdcp_key">正在重烧录MAC地址和序列号HDCP KEY</string>
	<string name="error_unknown">未知错误</string>
	<string name="hdcp_is_burnded">HDCP KEY 已经烧录过，是否再次烧录</string>
	<string name="file_3d_not_found">找不到3D测试视频文件</string>
	<string name="lumens_cb_text">200流明</string>
	<string name="lumens_200">200流明</string>
	<string name="lumens_300">300流明</string>
	<string name="about_to_upload_message">有一个或多个测试项不通过，是否仍然上传数据到服务器！</string>
	<string name="ntc1_str">温度传感器1(Inner)</string>
	<string name="ntc2_str">温度传感器2(Green)</string>
	<string name="ntc3_str">温度传感器3(Red)</string>	
	<string name="ssid_lable">测试WIFI : </string>
	<string name="ssid_name">SSID</string>
	<string name="ssid_passwd">密码</string>
	<string name="connect_fail">连接失败</string>
	<string name="connect_success">连接成功</string>		
	<string name="standard_fan_speed">标准转速</string>
	<string name="low_speed">低速</string>
	<string name="high_speed">高速</string>
	<string name="begin_test">开始检测</string>
	<string name="switching_low_speed">正在切换为低速模式....</string>
	<string name="switching_high_speed">正在切换为高速模式....</string>
	<string name="calculating_fan_speed">正在统计风扇转速....</string>
</resources>
