<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:gravity="center">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/yellow"
		android:textSize="13.0pt"
		android:textStyle="bold"
		android:text="@string/touch_pad_tip"/>
	<Button
		android:id="@+id/btn3"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="30dip"
		android:background="@drawable/circle_button"
		android:text="@string/num_3"/>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip">
		<Button
			android:id="@+id/btn1"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/circle_button"
			android:layout_weight="1"
			android:text="@string/num_1"/>	
		<Button
			android:id="@+id/btn2"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/circle_button"
			android:layout_weight="1"
			android:text="@string/num_2"/>	
		<Button
			android:id="@+id/btn4"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/circle_button"
			android:layout_weight="1"
			android:text="@string/num_4"/>		
	
		<Button
			android:id="@+id/btn6"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:background="@drawable/circle_button"
			android:layout_weight="1"
			android:text="@string/num_6"/>	
		<Button
			android:id="@+id/btn7"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_weight="1"	
			android:background="@drawable/circle_button"
			android:text="@string/num_7"/>				
	</LinearLayout>
	<Button
		android:id="@+id/btn5"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:background="@drawable/circle_button"		
		android:text="@string/num_5"/>	
</LinearLayout>