<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="horizontal">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:orientation="vertical">
			<Button
				style="@style/small_button"
				android:id="@+id/adjust_btn"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/adjust"/>
			<TextView
				android:id="@+id/rgain"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"				
				android:text="@string/adc_rgain"/>
			<TextView
				android:id="@+id/ggain"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"				
				android:text="@string/adc_ggain"/>
			<TextView
				android:id="@+id/bgain"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"			
				android:text="@string/adc_bgain"/>
			<TextView
				android:id="@+id/roffset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"	
				android:text="@string/adc_roffset"/>
			<TextView
				android:id="@+id/goffset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"				
				android:text="@string/adc_goffset"/>
			<TextView
				android:id="@+id/boffset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"				
				android:text="@string/adc_boffset"/>
				
			<TextView
				android:id="@+id/adc_result"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"				
				android:text="@string/adc_test"/>	

			<TextView
				android:id="@+id/phase"
				android:visibility="gone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"		
				android:text="@string/adc_phase"/>	
			</LinearLayout>

			<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical">
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="4"
			android:visibility="invisible"/>	
		<FrameLayout
			android:id="@+id/adc_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/frame"
			android:layout_weight="1">
			<SurfaceView
				android:id="@+id/adc_surface"
				android:layout_width="match_parent"
				android:layout_height="match_parent"/>
			</FrameLayout>
		  <FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="4"
			android:visibility="invisible"/>	
		</LinearLayout>

			<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_weight="2"
		android:orientation="vertical">
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="invisible"/>			
		</LinearLayout>

		</LinearLayout>

	<LinearLayout
		android:id="@+id/bottom_ly"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:layout_weight="4"
		android:orientation="horizontal"
		android:visibility="invisible">
		<Button
			style="@style/small_button"
			android:id="@+id/pass_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pass"/>
		<Button
			style="@style/small_button"
			android:id="@+id/fail_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fail"/>			
	</LinearLayout>
	  	   	  
</LinearLayout>