<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:background="@drawable/main_bg">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<Button		
			style="@style/small_button"
			android:id="@+id/base"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/base_test"
			android:layout_marginTop="20dip"/>
		<Button		
			style="@style/small_button"
			android:id="@+id/video"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/video_test"
			android:layout_marginTop="20dip"/>
		<Button		
			style="@style/small_button"
			android:id="@+id/adc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/adc_test"
			android:layout_marginTop="20dip"/>
		<Button		
			style="@style/small_button"
			android:id="@+id/pattern"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pattern_test"
			android:layout_marginTop="20dip"/>
		<Button		
			style="@style/small_button"
			android:id="@+id/hdcp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hdcp_test"
			android:layout_marginTop="20dip"/>
		<Button		
			style="@style/small_button"
			android:id="@+id/finish"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/finish"
			android:layout_marginTop="20dip"/>
	</LinearLayout>
		
</RelativeLayout>