<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        <TextView
		    android:id="@+id/ntc1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:textSize="11.0pt"
			android:text="@string/ntc1_str"/>
		 <TextView
		    android:id="@+id/ntc2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:textSize="11.0pt"
			android:text="@string/ntc2_str"/>
		<TextView
		    android:id="@+id/ntc3_id" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:textSize="10.0pt"
			android:text="@string/ntc3_str"/>		
</LinearLayout>