<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sn_mac"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"
        android:orientation="vertical"
        android:paddingTop="3dp"
		android:gravity="center_horizontal"
		android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="10.0pt"
			android:text="@string/please_scan_serial_number"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_vertical">
			<EditText
				android:id="@+id/serial_editText"
				android:layout_width="350dip"
				android:layout_height="50dip"
				android:layout_marginLeft="50dip"
				android:layout_marginTop="10dip"
				android:cursorVisible="true"
				android:gravity="center"
				android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
				android:maxLength="12"
				android:singleLine="true" />

			<ImageView
				android:id="@+id/serial_img"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="5dp"
				android:src="@drawable/one_px"
				android:visibility="gone"/>
			
			<RadioGroup
				android:id="@+id/lumens_group"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:visibility="gone"
				android:layout_marginLeft="30dip"
				android:layout_marginTop="8dip">
				<RadioButton
					android:id="@+id/lumens_200"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="8.0pt"
					android:text="@string/lumens_200"/>
				<RadioButton
					android:id="@+id/lumens_300"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dip"
					android:textSize="8.0pt"
					android:text="@string/lumens_300"
					android:checked="true"/>
			</RadioGroup>
		</LinearLayout>

        <TextView
			android:id="@+id/lumens_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="25dip"
            android:textColor="@color/light_green"
            android:textSize="14.0pt"
			android:text="@string/lumens_300"
			android:visibility="gone"/>
			
    </LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/serial"
		android:orientation="vertical"
		android:layout_marginTop="25dip">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:layout_marginLeft="50dip"
			android:orientation="horizontal">
			<TextView
			    android:id="@+id/crc_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"		
				android:textColor="@color/white"
				android:textSize="10.0pt"
				android:text="@string/sn_tip_title"/>
			<TextView
			    android:id="@+id/crc_tip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="10.0pt"
				android:text="@string/sn_tip"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:layout_marginLeft="50dip"
			android:orientation="horizontal">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"		
				android:textColor="@color/white"
				android:textSize="10.0pt"
				android:text="@string/sn_last_error_message"/>
			<TextView
				android:id="@+id/last_error_message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/yellow"
				android:textSize="10.0pt"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip"
			android:layout_marginLeft="50dip"
			android:orientation="vertical">
			<TextView	
			    android:id="@+id/hdcp_title"	
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="10.0pt"
				android:textColor="@color/red"		
				android:text="@string/hdcp_make_up_tip"
				android:visibility="invisible"/>
			<Button
			    android:id="@+id/hdcp_re_burn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"		
				android:textColor="@color/white"
				android:textSize="10.0pt"
				android:text="@string/sn_re_hdcpkey"
				android:visibility="invisible"/>			
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>