<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:gravity="center"
	android:layout_gravity="center">
	<Button 
		style="@style/small_button"
		android:id="@+id/next_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true" 
		android:text="@string/next"
		android:visibility="invisible"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/next_btn"
		android:orientation="vertical">
		<!-- USB -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="horizontal">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					style="@style/small_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/usb1" />
				<ImageView
					android:id="@+id/usb1_img"
					android:layout_width="64px"
					android:layout_height="64px"
					android:src="@drawable/fail" />
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					style="@style/small_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/usb2" />
				<ImageView
					android:id="@+id/usb2_img"
					android:layout_width="64px"
					android:layout_height="64px"
					android:src="@drawable/fail" />
			</LinearLayout>
		</LinearLayout>
		
		<!-- ETH -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					style="@style/small_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/ethernet" />
				<ImageView
					android:id="@+id/eth_img"
					android:layout_width="64px"
					android:layout_height="64px"
					android:src="@drawable/fail" />
			</LinearLayout>
		</LinearLayout>
		
		<!-- WIFI -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="horizontal">
				<TextView
					style="@style/small_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/wifi" />
				<ImageView
					android:id="@+id/wifi_img"
					android:layout_width="64px"
					android:layout_height="64px"
					android:src="@drawable/fail" />
				<ImageView
					android:id="@+id/signal_img"
					android:layout_width="64px"
					android:layout_height="64px"
					android:src="@drawable/ic_wifi_signal_1_light" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>