<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:gravity="center"
	android:layout_gravity="center">
	<LinearLayout
		android:id="@+id/bottom_ly"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:orientation="horizontal"
		android:visibility="invisible">
		<Button
			style="@style/small_button"
			android:id="@+id/pass_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pass"/>
		<Button
			style="@style/small_button"
			android:id="@+id/fail_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/fail"/>			
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/bottom_ly"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="5"
			android:orientation="vertical">
			<Button
				style="@style/small_button"
				android:id="@+id/hdmi_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/hdmi"/>
			<Button
				style="@style/small_button"
				android:id="@+id/vga_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/vga"/>	
		</LinearLayout>
		<LinearLayout
			android:id="@+id/video_fg"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="horizontal">
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:visibility="invisible"/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:orientation="vertical">
				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="4"
					android:visibility="invisible"/>		
				<FrameLayout
					android:id="@+id/surface_container"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/frame"
					android:layout_weight="1">
					<SurfaceView
						android:id="@+id/video_surface"
						android:layout_width="match_parent"
						android:layout_height="match_parent"/>
				</FrameLayout>
				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="4"
					android:visibility="invisible"/>		
			</LinearLayout>
			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="2"
				android:visibility="invisible"/>	
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>